--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "產品管理";
 }
 
+
 <div class="container">
     <div class="row">
         <div class="col-md-8">
@@ -48,7 +49,11 @@
                 <th scope="row">@item.ReorderLevel</th>
                 <th scope="row">@item.Discontinued</th>
                 <th colspan="2">
-                    <button class="btn btn-success">Edit</button>
+                    <a class="nav-link text-dark" href="/Products/Details/@item.ProductId">
+                        <button class="btn btn-success">Detail</button>
+                    </a>
+
+                    <button class="btn btn-info">Edit</button>
                     <button class="btn btn-danger">Delete</button>
                 </th>
             </tr>
