--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -11,8 +11,10 @@
             <input type="button" class="btn btn-primary" value="Create Product">
         </div>
         <div class="col-md-4">
-            <input type="search" name="search" class="form-control" style="width :44%;display:inline; " placeholder="keyword" />
-            <input type="button" name="btnStart" class="btn btn-warning" value="search" />
+            @using (Html.BeginForm("Index", "Products", FormMethod.Get))
+            {
+                <input type="search" name="keyword" class="form-control" placeholder="請輸入關鍵字" />
+            }
         </div>
     </div>
 </div>
@@ -53,10 +55,10 @@
                     <a class="text-dark" href="/Products/Details/@item.ProductId">
                         <input type="button" class="btn btn-success" value="Detail" />
                     </a>
-                    <a class="text-dark" href="/Products/Details/@item.ProductId">
+                    <a class="text-dark" href="/Products/Edit/@item.ProductId">
                         <input type="button" class="btn btn-info" value="Edit" />
                     </a>
-                    <a class="text-dark" href="/Products/Details/@item.ProductId">
+                    <a class="text-dark" href="/Products/Delete/@item.ProductId">
                         <input type="button" class="btn btn-danger" value="Delete" />
                     </a>
 
