--- a/Views/Orders/details.cshtml
+++ b/Views/Orders/details.cshtml
@@ -31,6 +31,6 @@
     </div>
 
     <a class="nav-link text-dark" href="/Orders">
-        <button type="submit" class="btn btn-primary">Back List</button>
+        <input type="button" class="btn btn-primary" value="Back List">
     </a>
 </form>
