--- a/Views/Products/details.cshtml
+++ b/Views/Products/details.cshtml
@@ -83,6 +83,6 @@
     </div>
 
     <a class="nav-link text-dark" href="/Products">
-        <button type="submit" class="btn btn-primary">Back List</button>
+        <input type="button" class="btn btn-primary" value="Back List">
     </a>
 </form>
