--- a/Views/Products/edit.cshtml
+++ b/Views/Products/edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model YungchingDemo.Models.ViewModel.ProductModel;
 
 @{
-    ViewData["Title"] = "產品明細";
+    ViewData["Title"] = "編輯產品";
 }
 <form>
     @if (Model.ProductId != 0)
@@ -76,7 +76,7 @@
         </div>
     }
 
-    
+
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">中止</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.Discontinued">
