Mode Binding Property Fixed

--- a/Views/Products/details.cshtml
+++ b/Views/Products/details.cshtml
@@ -56,7 +56,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">庫存數量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductName">
+            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsInStock">
         </div>
     }
 
@@ -64,7 +64,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">訂購量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsInStock">
+            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsOnOrder">
         </div>
     }
 
@@ -72,7 +72,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">再次訂購量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsOnOrder">
+            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ReorderLevel">
         </div>
     }
 
